[package]
name = "ah-delivery"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = "0.7.16"
dotenv = "0.15.0"
futures = "0.3.31"
axum = "0.8.7"
ics = "0.5.8"
chrono = "0.4.42"
chrono-tz = "0.10.4"
regex = "1.12.3"
reqwest = "0.13.2"
bytes = "1.11.1"
image = "0.25.9"
tesseract = "0.15.2"
