[package]
name = "ah-delivery"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = { version = "0.7.16", features = ["with-chrono-0_4"] }
dotenv = "0.15.0"
futures = "0.3.31"
axum = "0.8.7"
ics = "0.5.8"
chrono = "0.4.42"
chrono-tz = "0.10.4"
regex = "1.12.3"
reqwest = "0.13.2"
bytes = "1.11.1"
aws-config = "1.8.14"
aws-sdk-textract = "1.94.0"
aws-types = "1.3.12"
dotenvy = "0.15.7"
postgres-types = { version = "0.2.12", features = ["derive"] }

